Set maven compiler plugin to version 8 for compatibility: Strin.isBlank() replaced by trim().isEmpty() fix outlier check for the entire domain instead of checking the edge new sorting in masterfile: UNKNOWN because of missing seasonality factors is written at the end of the table and is not color-coded(white background) additional column for the new growth rate at the end of the domain growth rates are displayed with one decimal positions in the menu refined, order stays the same recommendation name of UPDATE renamed to CHANGE